@@ -19,19 +19,6 @@ if(System.getProperty("os.arch") == "aarch64") {
 }
 def headless = "true".equals(System.getProperty("java.awt.headless"))
 
-def vTor = '4.7.13-4'
-def vKmpTor = '1.4.3'
-def kmpOs = osName
-if(os.macOsX) {
-    kmpOs = "macos"
-} else if(os.windows) {
-    kmpOs = "mingw"
-}
-def kmpArch = "x64"
-if(System.getProperty("os.arch") == "aarch64") {
-    kmpArch = "arm64"
-}
-
 group "com.sparrowwallet"
 version "${sparrowVersion}"
 
@@ -88,25 +75,9 @@ dependencies {
     implementation('com.sparrowwallet:hummingbird:1.7.4')
     implementation('co.nstant.in:cbor:0.9')
     implementation('org.openpnp:openpnp-capture-java:0.0.28-5')
-    implementation("io.matthewnelson.kotlin-components:kmp-tor:${vTor}-${vKmpTor}") {
-        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-common'
-    }
-    if(kmpOs == "linux" && kmpArch == "arm64") {
-        implementation("com.sparrowwallet.kmp-tor-binary:kmp-tor-binary-${kmpOs}${kmpArch}-jvm:${vTor}") {
-            exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-common'
-        }
-    } else {
-        implementation("io.matthewnelson.kotlin-components:kmp-tor-binary-${kmpOs}${kmpArch}:${vTor}") {
-            exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-common'
-        }
-    }
-    implementation("io.matthewnelson.kotlin-components:kmp-tor-binary-extract:${vTor}") {
-        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-common'
-    }
-    implementation("io.matthewnelson.kotlin-components:kmp-tor-ext-callback-manager:${vKmpTor}") {
-        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-common'
-    }
-    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.7.1') {
+    implementation("io.matthewnelson.kmp-tor:runtime:2.2.0")
+    implementation("io.matthewnelson.kmp-tor:resource-exec-tor-gpl:408.15.0")
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.10.1') {
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-common'
     }
     implementation('de.codecentric.centerdevice:centerdevice-nsmenufx:2.1.7')
@@ -190,6 +161,10 @@ application {
                                  "--add-opens=java.base/java.net=com.sparrowwallet.sparrow",
                                  "--add-opens=java.base/java.io=com.google.gson",
                                  "--add-opens=java.smartcardio/sun.security.smartcardio=com.sparrowwallet.sparrow",
+                                 "--add-opens=io.matthewnelson.kmp.tor.resource.geoip/io.matthewnelson.kmp.tor.resource.geoip=io.matthewnelson.kmp.tor.common.core",
+                                 "--add-exports=io.matthewnelson.kmp.tor.runtime.ctrl/io.matthewnelson.kmp.tor.runtime.ctrl.internal=io.matthewnelson.kmp.tor.runtime",
+                                 "--add-reads=io.matthewnelson.kmp.tor.runtime=io.matthewnelson.kmp.tor.common.core",
+                                 "--add-reads=io.matthewnelson.kmp.tor.runtime.ctrl=io.matthewnelson.kmp.process",
                                  "--add-reads=kotlin.stdlib=kotlinx.coroutines.core",
                                  "--add-reads=org.flywaydb.core=java.desktop"]
 
@@ -238,6 +213,10 @@ jlink {
                    "--add-opens=java.base/java.net=com.sparrowwallet.sparrow",
                    "--add-opens=java.base/java.io=com.google.gson",
                    "--add-opens=java.smartcardio/sun.security.smartcardio=com.sparrowwallet.sparrow",
+                   "--add-opens=io.matthewnelson.kmp.tor.resource.geoip/io.matthewnelson.kmp.tor.resource.geoip=io.matthewnelson.kmp.tor.common.core",
+                   "--add-exports=io.matthewnelson.kmp.tor.runtime.ctrl/io.matthewnelson.kmp.tor.runtime.ctrl.internal=io.matthewnelson.kmp.tor.runtime",
+                   "--add-reads=io.matthewnelson.kmp.tor.runtime=io.matthewnelson.kmp.tor.common.core",
+                   "--add-reads=io.matthewnelson.kmp.tor.runtime.ctrl=io.matthewnelson.kmp.process",
                    "--add-reads=com.sparrowwallet.merged.module=java.desktop",
                    "--add-reads=com.sparrowwallet.merged.module=java.sql",
                    "--add-reads=com.sparrowwallet.merged.module=com.sparrowwallet.sparrow",
@@ -471,119 +450,6 @@ extraJavaModuleInfo {
     module('net.coobird:thumbnailator', 'net.coobird.thumbnailator') {
         exports('net.coobird.thumbnailator')
         requires('java.desktop')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-jvm", 'kmp.tor.jvm') {
-        exports('io.matthewnelson.kmp.tor')
-        requires('kmp.tor.binary.extract.jvm')
-        requires('kmp.tor.manager.jvm')
-        requires('kmp.tor.manager.common.jvm')
-        requires('kmp.tor.controller.common.jvm')
-        requires('kotlin.stdlib')
-        requires('kotlinx.coroutines.core')
-        requires('java.management')
-    }
-    if(kmpOs == "linux" && kmpArch == "arm64") {
-        module("com.sparrowwallet.kmp-tor-binary:kmp-tor-binary-${kmpOs}${kmpArch}-jvm", "kmp.tor.binary.${kmpOs}${kmpArch}") {
-            exports("io.matthewnelson.kmp.tor.resource.${kmpOs}.${kmpArch}")
-            exports("kmptor.${kmpOs}.${kmpArch}")
-        }
-    } else {
-        module("io.matthewnelson.kotlin-components:kmp-tor-binary-${kmpOs}${kmpArch}-jvm", "kmp.tor.binary.${kmpOs}${kmpArch}") {
-            exports("io.matthewnelson.kmp.tor.binary.${kmpOs}.${kmpArch}")
-            exports("kmptor.${kmpOs}.${kmpArch}")
-        }
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-binary-extract-jvm", 'kmp.tor.binary.extract.jvm') {
-        exports('io.matthewnelson.kmp.tor.binary.extract')
-        exports('io.matthewnelson.kmp.tor.binary.extract.internal')
-        requires('kotlin.stdlib')
-        requires("kmp.tor.binary.${kmpOs}${kmpArch}")
-        requires('kmp.tor.binary.geoip.jvm')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-manager-jvm", 'kmp.tor.manager.jvm') {
-        exports('io.matthewnelson.kmp.tor.manager')
-        exports('io.matthewnelson.kmp.tor.manager.util')
-        requires('kmp.tor.controller.common.jvm')
-        requires('kmp.tor.manager.common.jvm')
-        requires('kotlin.stdlib')
-        requires('kotlinx.coroutines.core')
-        requires('kotlinx.atomicfu')
-        requires('kmp.tor.controller.jvm')
-        requires('kmp.tor.common.jvm')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-manager-common-jvm", 'kmp.tor.manager.common.jvm') {
-        exports('io.matthewnelson.kmp.tor.manager.common')
-        exports('io.matthewnelson.kmp.tor.manager.common.event')
-        exports('io.matthewnelson.kmp.tor.manager.common.state')
-        requires('kmp.tor.controller.common.jvm')
-        requires('kmp.tor.common.jvm')
-        requires('kotlin.stdlib')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-controller-common-jvm", 'kmp.tor.controller.common.jvm') {
-        exports('io.matthewnelson.kmp.tor.controller.common.config')
-        exports('io.matthewnelson.kmp.tor.controller.common.file')
-        exports('io.matthewnelson.kmp.tor.controller.common.control')
-        exports('io.matthewnelson.kmp.tor.controller.common.control.usecase')
-        exports('io.matthewnelson.kmp.tor.controller.common.events')
-        exports('io.matthewnelson.kmp.tor.controller.common.exceptions')
-        requires('kmp.tor.common.jvm')
-        requires('kotlin.stdlib')
-        requires('kotlinx.atomicfu')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-common-jvm", 'kmp.tor.common.jvm') {
-        exports('io.matthewnelson.kmp.tor.common.address')
-        requires('parcelize.jvm')
-        requires('kotlin.stdlib')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-controller-jvm", 'kmp.tor.controller.jvm') {
-        exports('io.matthewnelson.kmp.tor.controller.internal.controller')
-        requires('kmp.tor.common.jvm')
-        requires('kmp.tor.controller.common.jvm')
-        requires('kotlinx.coroutines.core')
-        requires('kotlin.stdlib')
-        requires('kotlinx.atomicfu')
-        requires('encoding.core.jvm')
-        requires('encoding.base16.jvm')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-ext-callback-common-jvm", 'kmp.tor.ext.callback.common.jvm') {
-        exports('io.matthewnelson.kmp.tor.ext.callback.common')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-ext-callback-manager-jvm", 'kmp.tor.ext.callback.manager.jvm') {
-        exports('io.matthewnelson.kmp.tor.ext.callback.manager')
-        requires('kmp.tor.manager.jvm')
-        requires('kmp.tor.ext.callback.common.jvm')
-        requires('kmp.tor.ext.callback.manager.common.jvm')
-        requires('kmp.tor.ext.callback.controller.common.jvm')
-        requires('kmp.tor.manager.common.jvm')
-        requires('kmp.tor.controller.common.jvm')
-        requires('kotlin.stdlib')
-        requires('kotlinx.coroutines.core')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-ext-callback-manager-common-jvm", 'kmp.tor.ext.callback.manager.common.jvm') {
-        exports('io.matthewnelson.kmp.tor.ext.callback.manager.common')
-        requires('kmp.tor.ext.callback.controller.common.jvm')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-ext-callback-controller-common-jvm", 'kmp.tor.ext.callback.controller.common.jvm') {
-        exports('io.matthewnelson.kmp.tor.ext.callback.controller.common.control')
-        exports('io.matthewnelson.kmp.tor.ext.callback.controller.common.control.usecase')
-    }
-    module("io.matthewnelson.kotlin-components:kmp-tor-binary-geoip-jvm", 'kmp.tor.binary.geoip.jvm') {
-        exports('io.matthewnelson.kmp.tor.binary.geoip')
-        exports('kmptor')
-    }
-    module("base16-jvm-2.0.0.jar", 'encoding.base16.jvm', "2.0.0") {
-        exports('io.matthewnelson.encoding.base16')
-        requires('encoding.core.jvm')
-        requires('kotlin.stdlib')
-    }
-    module("base32-jvm-2.0.0.jar", 'encoding.base32.jvm', "2.0.0")
-    module("base64-jvm-2.0.0.jar", 'encoding.base64.jvm', "2.0.0")
-    module("core-jvm-2.0.0.jar", 'encoding.core.jvm', "2.0.0") {
-        exports('io.matthewnelson.encoding.core')
-        requires('kotlin.stdlib')
-    }
-    module("parcelize-jvm-0.1.2.jar", 'parcelize.jvm', "0.1.2") {
-        exports('io.matthewnelson.component.parcelize')
     }
     module('org.jcommander:jcommander', 'org.jcommander') {
         exports('com.beust.jcommander')
